# TherasyncAnalysis

./: .gitignore  HRBIDSWRITER_REFACTORING.md  LICENSE  PHASE2_REFACTORING.md  PHASE2_STATUS.md  PHASE3_REPORT.md  PREPROCESSING_ISSUES.md  QUICKREF.md  QUICKSTART.md  README.md  REFACTORING_ANALYSIS.md  TODO.md  pyproject.toml
.github/: copilot-instructions.md
config/: config.yaml  dppa_dyads.yaml  dppa_dyads_real.yaml  example_config.yaml
docs/: KNOWN_ISSUES_MOI.md  alliance_icd_analysis_report.md  api_reference.md  bvp_decisions.md  bvp_metrics_research.md  bvp_preprocessing_research.md  dppa_todo.md  dppa_viz_todo.md  eda_decisions.md  eda_metrics_research.md  eda_preprocessing_research.md  eda_testing_results.md  environment_setup.md  epoching-integration-plan.md  hr_metrics_research.md  quick_reference.md  resources.md  sprint3_summary.md  sprint_2_summary.md  technical_decisions_validation.md  testing_guide.md  todo-fix-preprocessing-visualization.md  todo-fix.md  troubleshooting.md  visualization_flexible_moments.md
scripts/: check_duration_consistency.py  clean_outputs.py  preprocess_bvp.py  preprocess_eda.py  preprocess_hr.py
scripts/alliance/: epoch_moi_annotations.py  validate_moi_files.py  visualize_moi_annotations.py
scripts/analysis/: __init__.py  compute_preprocessing_stats.py  (+4 more)
src/: __init__.py
tests/: test_alliance_icd.py  test_alliance_pipeline.py  test_bvp_pipeline.py  test_dppa.py  test_dppa_animation.py  test_dppa_viz.py  test_eda_pipeline.py  test_epoching.py  test_generate_epoch_frames_cli.py  test_temp_pipeline.py  test_viz_config.py
(+94 files in other folders)
